# pocket-node-releases

./: .gitignore  GITHUB_SETUP_GUIDE.md  README.md  all_kt_files.txt  build.gradle.kts  crash_log.txt  crash_log2.txt  crash_log3.txt  files.txt  fresh_chat_crash_log.txt  gen_key.kt  gradle.properties  keygen.sh  settings.gradle.kts  view.xml  window_current.xml
.github/workflows/: build-release.yml  pages.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pocketnode_jni.cpp  privatellm_jni.cpp
app/src/main/java/com/pocketnode/app/: MainActivity.kt  MainApplication.kt
app/src/main/java/com/pocketnode/app/data/: AppDatabase.kt  ChatDao.kt  ChatRepository.kt  ModelDao.kt  ModelManager.kt
app/src/main/java/com/pocketnode/app/data/model/: ChatMessage.kt  Conversation.kt  LocalModel.kt  RemoteModel.kt
app/src/main/java/com/pocketnode/app/inference/: ApiServer.kt  ChatViewModel.kt  DocumentReader.kt  GenerationService.kt  LlamaInference.kt  PromptTemplate.kt
app/src/main/java/com/pocketnode/app/licensing/: LicenseManager.kt  ProGate.kt
app/src/main/java/com/pocketnode/app/ui/: ViewModelFactory.kt
app/src/main/java/com/pocketnode/app/ui/screens/: AskImageScreen.kt  ChatScreen.kt  GalleryScreen.kt  ModelsScreen.kt  ModelsViewModel.kt  PromptLabScreen.kt  SettingsScreen.kt  SettingsViewModel.kt  UpgradeScreen.kt
app/src/main/java/com/pocketnode/app/ui/theme/: Theme.kt
app/src/main/java/com/pocketnode/app/updater/: AppUpdater.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
cli/: index.js  package.json
landing/: index.html  simulation.html
